# Gen-AI-Home-Interior-Designer

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/routers/: tryon.py
backend/utils/: base64_helpers.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  ImageUpload.jsx  MarkdownCard.jsx
